--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="col-sm-7">    
 
     <ul class="lead">
-        <li>Cabildo 332 - El Jaguel. Lun a Vie 9 a 19. Sábado 9 a 13:30 <a href="https://goo.gl/maps/QrpViy14s6X14tzNA" class="link-info">Ubicación</a></li>
+        <li>El Ceibo 192 - El Jaguel. Lun a Vie 9-13 17-19. Sábado 9 a 13 <a href="https://goo.gl/maps/GRWND2M3WjFApxwr7" class="link-info">Ubicación</a></li>
         <li>Marxer 1404 - Luis Guillón. Lun a Vie 10 a 18. Sábado 10 a 13 <a href="https://goo.gl/maps/fuKtSb7SU3wqYXAKA" class="link-info">Ubicación</a></li>
         <li>Vernet 3465 - Mte.Grande. Lun a Sab 9 a 18:30 <a href="https://goo.gl/maps/nN83BZkEm18fqGY16" class="link-info">Ubicación</a></li>
         <li>Colón 2274 - Mte.Grande. Lun a Vie 9 a 13 - 14 a 19. Sábado 9 a 13 <a href="https://goo.gl/maps/iC1X9bxtURzvkfqz5" class="link-info">Ubicación</a></li>
